--- a/Task App/task.css
+++ b/Task App/task.css
@@ -7,7 +7,7 @@
 .container{
     width: 100%;
     min-height: 100vh;
-    background: linear-gradient(135deg, #99140d, #0a1366de);
+    background: linear-gradient(135deg, #3b075ee8, #2e0e11f3);
     padding: 10px;
 }
 .to-do{
