Added functionality for popups using JS

--- a/Popup/popup.css
+++ b/Popup/popup.css
@@ -123,6 +123,13 @@
     padding: 0 30px 30px;
     color: #333;
     visibility: hidden;
+    transition: transform 0.4s top 0.4s;
+}
+
+.open-popup {
+    visibility: visible;
+    top: 50%;
+    transform: translate(-50%, -50%) scale(1);
 }
 
 .popup img {
@@ -142,6 +149,6 @@
     width: 100%;
     margin-top: 50px;
     padding: 10px 0;
-    background: #6f4649;
+    background: #04d843fb;
     color: #fff;
 }
